Tweak some configurations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,26 +1,9 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   draconomicon: "The Draconomicon"
+  date:
+    formats:
+      default: "%m/%d/%Y"
+      with_weekday: "%a %m/%d/%y"
   paths:
     new_user_session: "Sign in"
     new_user_password: "Forgot your password?"
@@ -31,3 +14,23 @@ en:
     new_user_confirmation: "Didn't receive confirmation instructions?"
     new_user_unlock: "Didn't receive unlock instructions?"
     root: "Home"
+  time:
+    formats:
+      default: "%a, %b %-d, %Y at %r"
+      date: "%b %-d, %Y"
+      short: "%B %d"
+  titles:
+    application: "The Draconomicon"
+    devise:
+      confirmations:
+        new: "Resend confirmation"
+      passwords:
+        edit: "Change your password"
+        new: "Reset password"
+      registrations:
+        edit: "Edit user"
+        new: "Sign up"
+      sessions:
+        new: "Sign in"
+      unlocks:
+        new: "Unlock account"
