Add User controller, configure kaminari

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,6 @@ en:
       default: "%m/%d/%Y"
       with_weekday: "%a %m/%d/%y"
   paths:
-    current_user: "Profile"
     new_user_session: "Sign in"
     destroy_user_session: "Sign out"
     new_user_password: "Forgot your password?"
@@ -15,8 +14,11 @@ en:
     edit_user_registration: "Edit user"
     new_user_confirmation: "Didn't receive confirmation instructions?"
     new_user_unlock: "Didn't receive unlock instructions?"
+    users: "Users"
+    user: "Profile"
     root: "Home"
     about: "About"
+    contact: "Contact"
   time:
     formats:
       default: "%a, %b %-d, %Y at %r"
@@ -37,3 +39,6 @@ en:
         new: "Sign in"
       unlocks:
         new: "Unlock account"
+    users:
+      index: "All users"
+      show: "%{user}"
