--- a/config/locales/paths/en.yml
+++ b/config/locales/paths/en.yml
@@ -9,6 +9,9 @@ en:
     edit_user_registration: "Edit user"
     new_user_confirmation: "Didn't receive confirmation instructions?"
     new_user_unlock: "Didn't receive unlock instructions?"
+    new_user_characters: "New character"
+    edit_user_character: "Edit character"
+    user_character: "Character sheet"
     users: "Users"
     user: "Profile"
     root: "Home"
