--- a/config/locales/views/devise/en.yml
+++ b/config/locales/views/devise/en.yml
@@ -5,6 +5,22 @@ en:
         heading: "Need to confirm?"
         description: "You can resend your confirmation email."
         submit: "Resend confirmation instructions"
+    mailer:
+      confirmation_instructions:
+        greeting: "Welcome %{name}!"
+        instructions: "You can confirm your account email through the link below:"
+        link: "Confirm my account"
+      reset_password_instructions:
+        greeting: "Hello %{name},"
+        instructions: "Someone has requested a link to change your password. You can do this through the link below:"
+        link: "Change my password"
+        ignore: "If you didn't request this, please ignore this email."
+        help: "Your password won't change until you access the link above and create a new one."
+      unlock_instructions:
+        greeting: "Hello %{name},"
+        info: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+        instructions: "Follow the link below to unlock your account:"
+        link: "Unlock my account"
     passwords:
       edit:
         heading: "Change your password"
