Add Sidekiq link to navbar

--- a/config/locales/paths/en.yml
+++ b/config/locales/paths/en.yml
@@ -14,6 +14,7 @@ en:
     user_character: "Character sheet"
     users: "Users"
     user: "Profile"
+    sidekiq_web: "Sidekiq Console"
     root: "Home"
     home: "Home"
     about: "About"
