Add strings, tweak soem classes

--- a/config/locales/alerts/en.yml
+++ b/config/locales/alerts/en.yml
@@ -5,4 +5,6 @@ en:
     signed_in_user: "You must be signed in to perform that action."
 
     characters:
-      created: "Successfully created character."
+      created: "Successfully created %{name}."
+      updated: "Successfully updated %{name}."
+      deleted: "Successfully deleted %{name}."
