--- a/config/locales/views/characters/en.yml
+++ b/config/locales/views/characters/en.yml
@@ -3,3 +3,11 @@ en:
     new:
       heading: "New character"
       submit: "Save character"
+    edit:
+      heading: "Edit character"
+      submit: "Save character"
+    show:
+      edit_link: "Edit"
+      delete:
+        link: "Delete"
+        confirmation: "Are you sure?"
